Add sending to database

--- a/src/index.html
+++ b/src/index.html
@@ -83,53 +83,55 @@
     </header>
 
     <div id="pages">
-      <section class="home container">
-        <div class="menu">
-          <a href="#/order" class="order">order online</a>
-          <a href="#/booking" class="order">book a table</a>
-          <div class="hours">opening hours</div>
-        </div>
+      <section id="home">
+        <section class="home container">
+          <div class="menu">
+            <a href="#order" class="nav-links">order online</a>
+            <a href="#booking" class="nav-links">book a table</a>
+            <div class="hours">opening hours</div>
+          </div>
 
-        <div class="carousel">
-          <div class="img"></div>
-          <div class="content">
-            <h3 class="title">amazing service!</h3>
-            <p class="content">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias
-              maiores et unde vel at neque.
-            </p>
-            <p class="signature">- Lorem Ipsum</p>
+          <div class="carousel">
+            <div class="img"></div>
+            <div class="content">
+              <h3 class="title">amazing service!</h3>
+              <p class="content">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias
+                maiores et unde vel at neque.
+              </p>
+              <p class="signature">- Lorem Ipsum</p>
+            </div>
+            <div class="wheels">
+              <i class="fas fa-circle"></i>
+              <i class="fas fa-circle"></i>
+              <i class="fas fa-circle"></i>
+            </div>
           </div>
-          <div class="wheels">
-            <i class="fas fa-circle"></i>
-            <i class="fas fa-circle"></i>
-            <i class="fas fa-circle"></i>
-          </div>
-        </div>
 
-        <div class="gallery">
-          <div class="photo1">
-            <i class="fas fa-heart"></i><i class="fas fa-share-alt"></i>
+          <div class="gallery">
+            <div class="photo1">
+              <i class="fas fa-heart"></i><i class="fas fa-share-alt"></i>
+            </div>
+            <div class="photo2">
+              <i class="fas fa-heart"></i><i class="fas fa-share-alt"></i>
+            </div>
+            <div class="photo3">
+              <i class="fas fa-heart"></i><i class="fas fa-share-alt"></i>
+            </div>
+            <div class="photo4">
+              <i class="fas fa-heart"></i><i class="fas fa-share-alt"></i>
+            </div>
+            <div class="photo5">
+              <i class="fas fa-heart"></i><i class="fas fa-share-alt"></i>
+            </div>
+            <div class="photo6">
+              <i class="fas fa-heart"></i><i class="fas fa-share-alt"></i>
+            </div>
           </div>
-          <div class="photo2">
-            <i class="fas fa-heart"></i><i class="fas fa-share-alt"></i>
-          </div>
-          <div class="photo3">
-            <i class="fas fa-heart"></i><i class="fas fa-share-alt"></i>
-          </div>
-          <div class="photo4">
-            <i class="fas fa-heart"></i><i class="fas fa-share-alt"></i>
-          </div>
-          <div class="photo5">
-            <i class="fas fa-heart"></i><i class="fas fa-share-alt"></i>
-          </div>
-          <div class="photo6">
-            <i class="fas fa-heart"></i><i class="fas fa-share-alt"></i>
-          </div>
-        </div>
-        <a href="http://www.instagram.com" class="insta" target="_blank"
-          >View more on instagram</a
-        >
+          <a href="http://www.instagram.com" class="insta" target="_blank"
+            >View more on instagram</a
+          >
+        </section>
       </section>
       <section id="order">
         <div id="product-list" class="product-list container"></div>
