--- a/src/index.html
+++ b/src/index.html
@@ -28,10 +28,11 @@
             <h1 class="logo__title"><span>Mamma</span>Mia!</h1>
             <h2 class="logo__subtitle">the best homemade Italian food</h2>
           </div>
-          <!-- <div class="main-nav">
-            <a href="#order">Order</a>
-            <a href="#booking">Booking</a>
-          </div> -->
+          <div class="main-nav">
+            <a class="nav-links" href="#home">Homepage</a>
+            <a class="nav-links" href="#order">Order</a>
+            <a class="nav-links" href="#booking">Booking</a>
+          </div>
           <div id="cart" class="cart">
             <div class="cart__summary">
               <span class="cart__total-number">0</span>
@@ -86,9 +87,18 @@
       <section id="home">
         <section class="home container">
           <div class="menu">
-            <a href="#order" class="nav-links">order online</a>
-            <a href="#booking" class="nav-links">book a table</a>
-            <div class="hours">opening hours</div>
+            <div class="links">
+              <a href="#order" class="nav-links order">order online </a>
+              <p class="hover-text">Lorem ipsum lorem ipsum</p>
+            </div>
+            <div class="links">
+              <a href="#booking" class="nav-links book">book a table </a>
+              <p class="hover-text">Lorem ipsum lorem ipsum</p>
+            </div>
+            <div class="hours">
+              <p>opening hours</p>
+              <p class="data">tue-sun, 12pm - 12am</p>
+            </div>
           </div>
 
           <div class="carousel">
@@ -96,8 +106,9 @@
             <div class="content">
               <h3 class="title">amazing service!</h3>
               <p class="content">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias
-                maiores et unde vel at neque.
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
+                egestas viverra tortor, eu ullamcorper dui imperdiet nec. Nunc
+                sed dolor at elit lobortis sodales.
               </p>
               <p class="signature">- Lorem Ipsum</p>
             </div>
@@ -110,22 +121,34 @@
 
           <div class="gallery">
             <div class="photo1">
-              <i class="fas fa-heart"></i><i class="fas fa-share-alt"></i>
+              <div>
+                <i class="fas fa-heart"></i><i class="fas fa-share-alt"></i>
+              </div>
             </div>
             <div class="photo2">
-              <i class="fas fa-heart"></i><i class="fas fa-share-alt"></i>
+              <div>
+                <i class="fas fa-heart"></i><i class="fas fa-share-alt"></i>
+              </div>
             </div>
             <div class="photo3">
-              <i class="fas fa-heart"></i><i class="fas fa-share-alt"></i>
+              <div>
+                <i class="fas fa-heart"></i><i class="fas fa-share-alt"></i>
+              </div>
             </div>
             <div class="photo4">
-              <i class="fas fa-heart"></i><i class="fas fa-share-alt"></i>
+              <div>
+                <i class="fas fa-heart"></i><i class="fas fa-share-alt"></i>
+              </div>
             </div>
             <div class="photo5">
-              <i class="fas fa-heart"></i><i class="fas fa-share-alt"></i>
+              <div>
+                <i class="fas fa-heart"></i><i class="fas fa-share-alt"></i>
+              </div>
             </div>
             <div class="photo6">
-              <i class="fas fa-heart"></i><i class="fas fa-share-alt"></i>
+              <div>
+                <i class="fas fa-heart"></i><i class="fas fa-share-alt"></i>
+              </div>
             </div>
           </div>
           <a href="http://www.instagram.com" class="insta" target="_blank"
